fix(generic): Preserve BLOBS path across copy iterations (#1450)
Changes in diff

1. Using job store to save ID to path mapping 
2. Blobs serializer only parses the tree single depth, it uses job store
to link parent & subfolders across different iterations